--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -20,7 +20,7 @@
     <string name="add_button">Add</string>
     <string name="grey_pencil">grey pencil</string>
     <string name="notebook_image">notebook image</string>
-    <string name="empty_view_title_text">Looks like you don\'t have anything to do...</string>
-    <string name="empty_view_subtitle_text">...why don\'t you add something?</string>
+    <string name="empty_view_title_text">Looks like you don\'t have anything to do…</string>
+    <string name="empty_view_subtitle_text">…why don\'t you add something?</string>
 
 </resources>
