--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -4,4 +4,5 @@
     <string name="notebook_image">notebook image</string>
     <string name="empty_view_title_text">Looks like you don\'t have anything to do...</string>
     <string name="empty_view_subtitle_text">...why don\'t you add something?</string>
+    <string name="share">Share</string>
 </resources>
