--- a/app/src/main/res/values-w820dp/strings.xml
+++ b/app/src/main/res/values-w820dp/strings.xml
@@ -2,7 +2,11 @@
 <resources>
     <string name="grey_pencil">grey pencil</string>
     <string name="notebook_image">notebook image</string>
-    <string name="empty_view_title_text">Looks like you don\'t have anything to do...</string>
-    <string name="empty_view_subtitle_text">...why don\'t you add something?</string>
+    <string name="empty_view_title_text">Looks like you don\'t have anything to do…</string>
+    <string name="empty_view_subtitle_text">…why don\'t you add something?</string>
     <string name="share">Share</string>
+    <string name="drag_handle">drag handle</string>
+    <string name="sort_order">Sort Order</string>
+    <string name="sort_by_priority">Priority</string>
+    <string name="sort_by_id">Asc Order</string>
 </resources>
