--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">To-Do List</string>
     <string name="main_activity_name">All Tasks</string>
-    <string name="add_task_activity_name">Add a New Task</string>
+    <string name="add_task_activity_name">Add or Edit a Task</string>
 
     <!-- Strings for MainActivity -->
     <string name="priority_1">1</string>
@@ -23,5 +23,9 @@
     <string name="empty_view_title_text">Looks like you don\'t have anything to do…</string>
     <string name="empty_view_subtitle_text">…why don\'t you add something?</string>
     <string name="share">Share</string>
+    <string name="drag_handle">drag handle</string>
+    <string name="sort_order">Sort Order</string>
+    <string name="sort_by_priority">Priority</string>
+    <string name="sort_by_id">Asc Order</string>
 
 </resources>
